added country select

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,17 @@
     <p>Learn what dinosaur you would be based on some simple questions</p>
     <img src="static/images/tacosaurus.jpg" alt="tacosaurus.jpg" width="300" height="300" style="border-radius: 20%;">
 <form method="post">
-    <input type="text" id="fname" name="fname" placeholder="What's your name?"><br>
-    <input type="number" name="num" value="1234"/><br>
+    <input type="text" id="fname" name="fname" placeholder="What's your name?" required><br>
+    <input type="number" name="num" step="0.01" value="1.70"/><br>
     <select name="diet" id="diet">
         <option value="omnivore">You like a well balanced meal 🍲</option>
         <option value="carnivore">You prefer a big juicy steak 🥩</option>
         <option value="herbivore">You like a good salad 🥗</option>
+    </select><br>
+    <select>
+        {% for c in countries %}
+        <option value={{c}}>{{c}}</option>
+        {% endfor %}
     </select><br>
     <input type="submit">
 </form>
