passing country to backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <option value="carnivore">You prefer a big juicy steak 🥩</option>
         <option value="herbivore">You like a good salad 🥗</option>
     </select><br>
-    <select>
+    <select name="country" id="country">
         {% for c in countries %}
         <option value={{c}}>{{c}}</option>
         {% endfor %}
