--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="icon" type="image/ico" href="/static/images/favicon.ico"/>
-    <meta charset="UTF-8">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+
+    <link rel="icon" type="image/ico" href="/static/images/favicon.ico" />
     <title>Dino Quiz</title>
-</head>
-<body>
-    <h2>Machine Learning Dino Quiz</h2>
-    <p>Learn what dinosaur you would be based on some simple questions</p>
-    <img src="static/images/tacosaurus.jpg" alt="tacosaurus.jpg" width="300" height="300" style="border-radius: 20%;">
-    <form method="post">
-        <input type="text" id="name" name="name" placeholder="What's your name?" required><br>
-        <input type="number" name="age" placeholder="How old are you?" min="0" max="100" required/><br>
-        <input type="number" name="height" step="0.01" min="0" max="3" placeholder="How tall are you? (meters)" required/><br>
+  </head>
+  <body>
+    <div class="container">
+      <h2>Machine Learning Dino Quiz</h2>
+      <p>Learn what dinosaur you would be based on some simple questions</p>
+      <img
+        src="static/images/tacosaurus.jpg"
+        alt="tacosaurus.jpg"
+        width="300"
+        height="300"
+        style="border-radius: 20%"
+      />
+      <form method="post">
+        <input
+          type="text"
+          id="name"
+          name="name"
+          placeholder="What's your name?"
+          required
+        /><br />
+        <input
+          type="number"
+          name="age"
+          placeholder="How old are you?"
+          min="0"
+          max="100"
+          required
+        /><br />
+        <input
+          type="number"
+          name="height"
+          step="0.01"
+          min="0"
+          max="3"
+          placeholder="How tall are you? (meters)"
+          required
+        /><br />
         <select name="diet" id="diet">
-            <option value="omnivore">You like a well balanced meal 🍲</option>
-            <option value="carnivore">You prefer a big juicy steak 🥩</option>
-            <option value="herbivore">You like a good salad 🥗</option>
-        </select><br>
+          <option value="omnivore">You like a well balanced meal 🍲</option>
+          <option value="carnivore">You prefer a big juicy steak 🥩</option>
+          <option value="herbivore">You like a good salad 🥗</option></select
+        ><br />
         <select name="country" id="country">
-            {% for c in countries %}
-            <option value={{c}}>{{c}}</option>
-            {% endfor %}
-        </select><br>
-        <input type="submit">
-    </form>
+          {% for c in countries %}
+          <option value="{{c}}">{{c}}</option>
+          {% endfor %}</select
+        ><br />
+        <input type="submit" />
+      </form>
 
-    <p>echo: {{ result }}</p>
-
-</body>
+      <p>echo: {{ result }}</p>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
