--- a/templates/index.html
+++ b/templates/index.html
@@ -18,54 +18,64 @@
   </head>
   <body>
     <div class="container">
-      <h2>Machine Learning Dino Quiz</h2>
-      <p>Learn what dinosaur you would be based on some simple questions</p>
-      <img
-        src="static/images/tacosaurus.jpg"
-        alt="tacosaurus.jpg"
-        width="300"
-        height="300"
-        style="border-radius: 20%"
-      />
-      <form method="post">
-        <input
-          type="text"
-          id="name"
-          name="name"
-          placeholder="What's your name?"
-          required
-        /><br />
-        <input
-          type="number"
-          name="age"
-          placeholder="How old are you?"
-          min="0"
-          max="100"
-          required
-        /><br />
-        <input
-          type="number"
-          name="height"
-          step="0.01"
-          min="0"
-          max="3"
-          placeholder="How tall are you? (meters)"
-          required
-        /><br />
-        <select name="diet" id="diet">
-          <option value="omnivore">You like a well balanced meal 🍲</option>
-          <option value="carnivore">You prefer a big juicy steak 🥩</option>
-          <option value="herbivore">You like a good salad 🥗</option></select
-        ><br />
-        <select name="country" id="country">
-          {% for c in countries %}
-          <option value="{{c}}">{{c}}</option>
-          {% endfor %}</select
-        ><br />
-        <input type="submit" />
-      </form>
+      <div class="row justify-content-center mt-5">
+        <div class="col-8">
+          <h2 class="text-center display-2">Machine Learning Dino Quiz</h2>
+          <p class="text-center">
+            Learn what dinosaur you would be based on some simple questions
+          </p>
+          <div class="text-center mb-3">
+            <img
+              src="static/images/tacosaurus.jpg"
+              alt="tacosaurus.jpg"
+              width="300"
+              height="300"
+              style="border-radius: 20%"
+            />
+          </div>
+          <form method="post" class="row">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="What's your name?"
+              required
+            /><br />
+            <input
+              type="number"
+              name="age"
+              placeholder="How old are you?"
+              min="0"
+              max="100"
+              required
+            /><br />
+            <input
+              type="number"
+              name="height"
+              step="0.01"
+              min="0"
+              max="3"
+              placeholder="How tall are you? (meters)"
+              required
+            /><br />
+            <select name="diet" id="diet">
+              <option value="omnivore">You like a well balanced meal 🍲</option>
+              <option value="carnivore">You prefer a big juicy steak 🥩</option>
+              <option value="herbivore">
+                You like a good salad 🥗
+              </option></select
+            ><br />
+            <select name="country" id="country">
+              {% for c in countries %}
+              <option value="{{c}}">{{c}}</option>
+              {% endfor %}</select
+            ><br />
+            <input type="submit" />
+          </form>
 
-      <p>echo: {{ result }}</p>
+          <p>echo: {{ result }}</p>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
