--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
     <title>Dino Quiz</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container pt-4 mb-4 bg-light rounded-5">
       <div class="row justify-content-center mt-5">
         <div class="col-8">
-          <h2 class="text-center display-2">Machine Learning Dino Quiz</h2>
+          <h2 class="text-center display-5">Machine Learning Dino Quiz</h2>
           <p class="text-center">
             Learn what dinosaur you would be based on some simple questions
           </p>
@@ -34,43 +34,63 @@
             />
           </div>
           <form method="post" class="row">
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="What's your name?"
-              required
-            /><br />
-            <input
-              type="number"
-              name="age"
-              placeholder="How old are you?"
-              min="0"
-              max="100"
-              required
-            /><br />
-            <input
-              type="number"
-              name="height"
-              step="0.01"
-              min="0"
-              max="3"
-              placeholder="How tall are you? (meters)"
-              required
-            /><br />
-            <select name="diet" id="diet">
-              <option value="omnivore">You like a well balanced meal 🍲</option>
-              <option value="carnivore">You prefer a big juicy steak 🥩</option>
-              <option value="herbivore">
-                You like a good salad 🥗
-              </option></select
-            ><br />
-            <select name="country" id="country">
-              {% for c in countries %}
-              <option value="{{c}}">{{c}}</option>
-              {% endfor %}</select
-            ><br />
-            <input type="submit" />
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input
+                class="form-control"
+                type="text"
+                id="name"
+                name="name"
+                placeholder="What's your name?"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="age" class="form-label">Age</label>
+              <input
+                class="form-control"
+                type="number"
+                name="age"
+                placeholder="How old are you?"
+                min="0"
+                max="100"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="height" class="form-label">Height</label>
+              <input
+                type="number"
+                name="height"
+                step="0.01"
+                min="0"
+                max="3"
+                placeholder="How tall are you? (meters)"
+                required
+                class="form-control"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="diet" class="form-label">Diet</label>
+              <select name="diet" id="diet" class="form-select">
+                <option value="omnivore">
+                  You like a well balanced meal 🍲
+                </option>
+                <option value="carnivore">
+                  You prefer a big juicy steak 🥩
+                </option>
+                <option value="herbivore">You like a good salad 🥗</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="country" class="form-label">Country</label>
+              <select name="country" id="country" class="form-control">
+                {% for c in countries %}
+                <option value="{{c}}">{{c}}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <input type="submit" class="btn btn-primary" />
           </form>
 
           <p>echo: {{ result }}</p>
