made image responsive

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,7 @@
             <img
               src="static/images/tacosaurus.jpg"
               alt="tacosaurus.jpg"
-              width="300"
-              height="300"
-              style="border-radius: 20%"
+              class="img-fluid rounded"
             />
           </div>
           <form method="post" class="row">
