--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
     <title>Dino Quiz</title>
   </head>
   <body>
-    <div class="container pt-4 mb-4 bg-light rounded-5">
-      <div class="row justify-content-center mt-5">
-        <div class="col-8">
+    <div class="container p-4 mb-4 bg-light rounded-5">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-sm-12">
           <h2 class="text-center display-5">Machine Learning Dino Quiz</h2>
           <p class="text-center">
             Learn what dinosaur you would be based on some simple questions
