--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,21 @@
       <div class="row justify-content-center">
         <div class="col-md-8 col-sm-12">
           <h2 class="text-center display-5">Machine Learning Dino Quiz</h2>
+          {% if dino%}
+          <div class="alert alert-success" role="alert">
+            Classified succesfully!
+          </div>
+          <div class="d-flex flex-column align-items-center">
+            <p class="display-5">Dinosaur: {{ dino }}</p>
+            <div class="text-center mb-3">
+              <img
+                src="{{img_url}}"
+                class="img-fluid rounded border border-dark"
+              />
+            </div>
+            <a href="/" class="btn btn-primary">Do the quiz again</a>
+          </div>
+          {% else -%}
           <p class="text-center">
             Learn what dinosaur you would be based on some simple questions
           </p>
@@ -31,7 +46,7 @@
               class="img-fluid rounded"
             />
           </div>
-          <form method="post" class="row">
+          <form method="post" class="row mb-3">
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
               <input
@@ -90,8 +105,7 @@
             </div>
             <input type="submit" class="btn btn-primary" />
           </form>
-
-          <p>echo: {{ result }}</p>
+          {% endif %}
         </div>
       </div>
     </div>
