--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,28 @@
           {% endif %}
         </div>
       </div>
+      <a
+        class="github-button"
+        href="https://github.com/GaboGomezT"
+        data-color-scheme="no-preference: dark; light: light; dark: dark;"
+        aria-label="Follow @GaboGomezT on GitHub"
+        >Follow @GaboGomezT</a
+      >
+
+      <a
+        href="https://twitter.com/GaboGomezT?ref_src=twsrc%5Etfw"
+        class="twitter-follow-button"
+        data-show-count="false"
+        >Follow @GaboGomezT</a
+      >
     </div>
+
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
