--- a/templates/index.html
+++ b/templates/index.html
@@ -86,13 +86,13 @@
             <div class="mb-3">
               <label for="diet" class="form-label">Diet</label>
               <select name="diet" id="diet" class="form-select">
-                <option value="omnivore">
+                <option value="omnivorous">
                   You like a well balanced meal 🍲
                 </option>
-                <option value="carnivore">
+                <option value="carnivorous">
                   You prefer a big juicy steak 🥩
                 </option>
-                <option value="herbivore">You like a good salad 🥗</option>
+                <option value="herbivorous">You like a good salad 🥗</option>
               </select>
             </div>
             <div class="mb-3">
